Adding MultiCAT paper (NAACL 2025)

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,30 @@
+@inproceedings{pyarelal-etal-2025-multicat,
+    title = "{M}ulti{CAT}: Multimodal Communication Annotations for Teams",
+    author = "Pyarelal, Adarsh  and
+      Culnan, John M  and
+      Qamar, Ayesha  and
+      Krishnaswamy, Meghavarshini  and
+      Wang, Yuwei  and
+      Jeong, Cheonkam  and
+      Chen, Chen  and
+      Miah, Md Messal Monem  and
+      Hormozi, Shahriar  and
+      Tong, Jonathan  and
+      Huang, Ruihong",
+    editor = "Chiruzzo, Luis  and
+      Ritter, Alan  and
+      Wang, Lu",
+    booktitle = "Findings of the Association for Computational Linguistics: NAACL 2025",
+    month = apr,
+    year = "2025",
+    address = "Albuquerque, New Mexico",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.findings-naacl.61/",
+    pages = "1077--1111",
+    ISBN = "979-8-89176-195-7",
+    abstract = "Successful teamwork requires team members to understand each other and communicate effectively, managing multiple linguistic and paralinguistic tasks at once. Because of the potential for interrelatedness of these tasks, it is important to have the ability to make multiple types of predictions on the same dataset. Here, we introduce Multimodal Communication Annotations for Teams (MultiCAT), a speech- and text-based dataset consisting of audio recordings, automated and hand-corrected transcriptions. MultiCAT builds upon data from teams working collaboratively to save victims in a simulated search and rescue mission, and consists of annotations and benchmark results for the following tasks: (1) dialog act classification, (2) adjacency pair detection, (3) sentiment and emotion recognition, (4) closed-loop communication detection, and (5) vocal (phonetic) entrainment detection. We also present exploratory analyses on the relationship between our annotations and team outcomes. We posit that additional work on these tasks and their intersection will further improve understanding of team communication and its relation to team performance. Code {\&} data: https://doi.org/10.5281/zenodo.14834835"
+}
+
 @inproceedings{rezaei-blanco-2024-paraphrasing,
   author    = {Rezaei, MohammadHossein  and  Blanco, Eduardo},
   title     = {Making Language Models Robust Against Negation},
