--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,18 @@
+@inproceedings{cooper-etal-2025-lies,
+    title = "The Lies Characters Tell: Utilizing Large Language Models to Normalize Adversarial Unicode Perturbations",
+    author = "Cooper, Portia and 
+	Blanco, Eduardo and
+	Surdeanu, Mihai",
+    booktitle = "Findings of the Association for Computational Linguistics: ACL 2025",
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    url="",
+    pages = "",
+    ISBN = "",
+    abstract = "Homoglyphs, Unicode characters that are visually homogeneous to Latin letters, are widely used to mask offensive content. Dynamic strategies are needed to combat homoglyphs as the Unicode library is ever-expanding and new substitution possibilities for Latin letters continuously emerge. The present study investigated two novel mitigation approaches that do not rely on strict mappings but instead harness the power of large language models to neutralize both known and unknown homoglyphs: (1) indirectly normalizing homoglyphs by replacing non-Latin characters with a delimiter and prompting large language models to fill in the blanks and (2) directly normalizing homoglyphs by using large language models to determine which characters should be replaced with Latin letters. We found that GPT-4o-mini constructed normalized text with an average cosine similarity score of 0.91 to the original tweets when applying our indirect method and 0.96 to the original tweets when applying our direct method. This study indicates that large language model-based normalization techniques can effectively unmask offensive content concealed by homoglyphs. Code and data are available in our GitHub repository."
+}
+
 @inproceedings{pyarelal-etal-2025-multicat,
     title = "{M}ulti{CAT}: Multimodal Communication Annotations for Teams",
     author = "Pyarelal, Adarsh  and
