added authorbots paper

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,15 @@
+
+@article{bambauer2023authorbots,
+  title={Authorbots},
+  author={Bambauer, Derek E and Surdeanu, Mihai},
+  journal={J. Free Speech L.},
+  volume={3},
+  pages={375},
+  year={2023},
+  publisher={HeinOnline},
+  url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4443714},
+}
+
 @misc{cooper2024findingwolfsheepsclothing,
       title={Finding a Wolf in Sheep's Clothing: Combating Adversarial Text-To-Image Prompts with Text Summarization}, 
       author={Portia Cooper and Harshita Narnoli and Mihai Surdeanu},
