added tacl and acl 2025 papers

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,4 +1,14 @@
 
+
+
+@article{golchin2025data,
+  title={Data contamination quiz: A tool to detect and estimate contamination in large language models},
+  author={Golchin, Shahriar and Surdeanu, Mihai},
+  journal={Transactions of the Association for Computational Linguistics},
+  year={2025},
+  url = {https://arxiv.org/abs/2311.06233}
+}
+
 @article{bambauer2023authorbots,
   title={Authorbots},
   author={Bambauer, Derek E and Surdeanu, Mihai},
@@ -8,6 +18,18 @@
   year={2023},
   publisher={HeinOnline},
   url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4443714},
+
+@inproceedings{dumitru-etal-2025-variable,
+    title = "Variable Layerwise Quantization: A Simple and Effective Approach to Quantize LLMs",
+    author = "Razvan-Gabriel Dumitru and Vikas Yadav and Rishabh Maheshwary and Paul Ioan Clotan and Sathwik Tejaswi Madhusudhan and Surdeanu, Mihai",
+    booktitle = "Findings of the Association for Computational Linguistics: ACL 2025",
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    url="",
+    pages = "",
+    ISBN = "",
+}
 
 @inproceedings{cooper-etal-2025-lies,
     title = "The Lies Characters Tell: Utilizing Large Language Models to Normalize Adversarial Unicode Perturbations",
