--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,6 +1,18 @@
 
 
 
+@inproceedings{rahimi-etal-2025-relation,
+    title = "Relation-Aware Prompting Makes Large Language Models Effective Zero-shot Relation Extractors",
+    author = "Rahimi, Mahdi  and
+      Dumitru, Razvan-Gabriel  and
+	  Surdeanu, Mihai",
+    booktitle = "Proceedings of the 14th Joint Conference on Lexical and Computational Semantics (*SEM 2025)",
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "",
+}
+
 @article{golchin2025data,
   title={Data contamination quiz: A tool to detect and estimate contamination in large language models},
   author={Golchin, Shahriar and Surdeanu, Mihai},
