CAT paper added

--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,16 @@
+@inproceedings{sanayei-etal-2025-debates,
+  title     = {Can LLMs Judge Debates? Evaluating Non-Linear Reasoning via Argumentation Theory Semantics},
+  author    = {Sanayei, Reza and Vesic, Srdjan and Blanco, Eduardo and Surdeanu, Mihai},
+  booktitle = {Findings of the Association for Computational Linguistics: NAACL 2025},
+  month     = {November},
+  year      = {2025},
+  address   = {Suzhou, China},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://arxiv.org/abs/2509.15739},
+  pages     = {},
+  abstract  = {Large Language Models (LLMs) excel at linear reasoning tasks but remain underexplored on non-linear structures such as those found in natural debates, which are best expressed as argument graphs. We evaluate whether LLMs can approximate structured reasoning from Computational Argumentation Theory (CAT). Specifically, we use Quantitative Argumentation Debate (QuAD) semantics, which assigns acceptability scores to arguments based on their attack and support relations. Given only dialogue-formatted debates from two NoDE datasets, models are prompted to rank arguments without access to the underlying graph. We test several LLMs under advanced instruction strategies, including Chain-of-Thought and In-Context Learning. While models show moderate alignment with QuAD rankings, performance degrades with longer inputs or disrupted discourse flow. Advanced prompting helps mitigate these effects by reducing biases related to argument length and position. Our findings highlight both the promise and limitations of LLMs in modeling formal argumentation semantics and motivate future work on graph-aware reasoning.}
+}
+
 @inproceedings{riaz-etal-2025-metasynth,
     title = "{M}eta{S}ynth: Meta-Prompting-Driven Agentic Scaffolds for Diverse Synthetic Data Generation",
     author = "Riaz, Haris  and
