--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,74 @@
+@inproceedings{su2025semantic,
+title={A Semantic Parsing Framework for End-to-End Time Normalization},
+author={Su, Xin and Yu, Sungduk and Howard, Phillip and Bethard, Steven},
+booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
+month = dec,
+year={2025},
+url={https://openreview.net/forum?id=aZooxbW63m},
+keywords={timelines, information extraction},
+}
+@inproceedings{su-etal-2025-transformer,
+    title = "Transformer-Based Temporal Information Extraction and Application: A Review",
+    author = "Su, Xin and Howard, Phillip and Bethard, Steven",
+    booktitle = "Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://openreview.net/forum?id=YjrVb8VNKi",
+    keywords = {timelines, information extraction},
+}
+@article{LI2025104881,
+title = {Identifying task groupings for multi-task learning using pointwise V-usable information},
+journal = {Journal of Biomedical Informatics},
+volume = {169},
+pages = {104881},
+year = {2025},
+month = jul,
+issn = {1532-0464},
+doi = {https://doi.org/10.1016/j.jbi.2025.104881},
+url = {https://www.sciencedirect.com/science/article/pii/S1532046425001108},
+author = {Yingya Li and Timothy Miller and Steven Bethard and Guergana Savova},
+keywords = {health, machine learning, negation},
+}
+@article{Stava_2025,
+doi = {10.1088/1748-9326/addee5},
+url = {https://dx.doi.org/10.1088/1748-9326/addee5},
+year = {2025},
+month = jun,
+publisher = {IOP Publishing},
+volume = {20},
+number = {7},
+pages = {074028},
+author = {Stava, Ashley and Thogmartin, Wayne E and Merideth, Robert and Bethard, Steven and Currim, Faiz and Derbridge, Jonathan J and Emerson, Kirk and Laparra, Egoitz and Lien, Aaron and McGovern, Emily and Pidot, Justin and Miller, Marc and Romero-Cardenas, Krista and Smith, Blaze and Winnebald, Carly and López-Hoffman, Laura},
+title = {Quantifying the substantive influence of public comment on United States federal environmental decisions under NEPA},
+journal = {Environmental Research Letters},
+keywords = {environmental policy},
+}
+@inproceedings{gonzalez-lopez-etal-2025-applying,
+    title = "Applying Transformer Architectures to Detect Cynical Comments in {S}panish Social Media",
+    author = "Gonzalez-Lopez, Samuel  and
+      Bethard, Steven  and
+      Platt-Molina, Rogelio  and
+      Orozco, Francisca",
+    editor = "Bak, JinYeong  and
+      Goot, Rob van der  and
+      Jang, Hyeju  and
+      Buaphet, Weerayut  and
+      Ramponi, Alan  and
+      Xu, Wei  and
+      Ritter, Alan",
+    booktitle = "Proceedings of the Tenth Workshop on Noisy and User-generated Text",
+    month = may,
+    year = "2025",
+    address = "Albuquerque, New Mexico, USA",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.wnut-1.8/",
+    doi = "10.18653/v1/2025.wnut-1.8",
+    pages = "68--77",
+    ISBN = "979-8-89176-232-9",
+    keywords = {workshop paper, social media, sentiment},
+}
 @inproceedings{sanayei-etal-2025-debates,
   title     = {Can LLMs Judge Debates? Evaluating Non-Linear Reasoning via Argumentation Theory Semantics},
   author    = {Sanayei, Reza and Vesic, Srdjan and Blanco, Eduardo and Surdeanu, Mihai},
