--- a/clulab_publications.bib
+++ b/clulab_publications.bib
@@ -1,3 +1,13 @@
+@inproceedings{wang-etal-2025-identifying,
+    title = "Identifying and Answering Questions with False Assumptions: An Interpretable Approach",
+    author = "Wang, Zijie and Blanco, Eduardo",
+    booktitle = "Proceedings of the 2025 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2025",
+    address = "Suzhou, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://arxiv.org/abs/2508.15139",
+}
 @inproceedings{su2025semantic,
 title={A Semantic Parsing Framework for End-to-End Time Normalization},
 author={Su, Xin and Yu, Sungduk and Howard, Phillip and Bethard, Steven},
